--- a/views/user/myOrders.ejs
+++ b/views/user/myOrders.ejs
@@ -24,7 +24,7 @@
 
                 <div class="orders-layout">
                     <!-- Sidebar -->
-                    <%- include('../partials/users/ordersSidebar') %>
+                    <%- include('../partials/users/sideBar', {currentPage : 'My Orders'}) %>
 
                     <!-- Orders content -->
                     <div class="orders-content">
