--- a/public/stylesheet/user/wallet.css
+++ b/public/stylesheet/user/wallet.css
@@ -30,7 +30,7 @@ a {
 
 /* Container */
 .container {
-    max-width: 1200px;
+    /* max-width: 1200px; */
     margin: 0 auto;
     background-color: var(--light-gray);
     padding: 20px;
