--- a/views/admin/brands.ejs
+++ b/views/admin/brands.ejs
@@ -54,6 +54,7 @@
                             <th>Brand Name</th>
                             <th>Description</th>
                             <th>Created On</th>
+                            <th>Brand Offer</th>
                             <th>Status</th>
                             <th>Actions</th>
                         </tr>
@@ -71,6 +72,7 @@
                                 <td><%= brand.brandName %></td>
                                 <td><%= brand.description %></td>
                                 <td><%= brand.createdAt.toString().split(" ").slice(1, 4).join(" ") %></td>
+                                <td><%= brand.brandOffer ? brand.brandOffer + '%' : '-' %></td>
                                 <td><%= brand.isBlocked ? 'Blocked' : 'Active'%></td>
                                 <td>
                                     <a href="#" class="action-icon editBrandButton"
@@ -78,7 +80,8 @@
                                         data-name="<%= brand.brandName %>"
                                         data-description='<%= brand.description %>'
                                         data-image='<%= brand.brandImage %>'
-                                        data-isblocked='<%= brand.isBlocked %>'>
+                                        data-isblocked='<%= brand.isBlocked %>'
+                                        data-brandoffer ='<%= brand.brandOffer %>'>
                                         <i class="fas fa-edit"></i>
                                         </a>
                                     <a href="#" class="action-icon" id="deleteBrandButton" onclick="deleteBrand('<%= brand._id%>')" ><i class="fas fa-trash"></i></a>
@@ -100,12 +103,17 @@
                     </div>
                     <div class="form-group">
                         <label for="description">Brand Description <span class="required">*</span></label>
-                        <textarea  name="description" placeholder="Brand Description" class="description" ></textarea>
+                        <textarea  name="description" placeholder="Brand Description" class="description"></textarea>
                         <div class="invalid-feedback"></div>
                     </div>
                     <div class="form-group">
                         <label for="brandImage">Brand Image</label>
                         <input type="file" id="addBrandImage" name="brandImage" accept="image/*" class="brandImage">
+                        <div class="invalid-feedback"></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="brandOffer">Brand Offer</label>
+                        <input type="number" id="addBrandOffer" name="brandOffer" class="brandOffer" placeholder="Brand Offer">
                         <div class="invalid-feedback"></div>
                     </div>
                     <div class="form-actions">
@@ -134,6 +142,11 @@
                         <label for="editBrandImage">Brand Image</label>
                         <input type="file" id="editBrandImage" name="brandImage" accept="image/*">
                         <div id="currentImage" style="margin-top: 10px;"></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="editBrandOffer">Brand Offer</label>
+                        <input type="number" id="editBrandOffer" name="brandOffer" class="brandOffer" placeholder="Brand Offer">
+                        <div class="invalid-feedback"></div>
                     </div>
                     <div class="form-group checkbox-group">
                         <label>Block Brand : 
