--- a/views/partials/users/sideBar.ejs
+++ b/views/partials/users/sideBar.ejs
@@ -6,19 +6,13 @@
             <a href="/profile">Profile</a>
         </li>
         <li class="<%= currentPage === 'orders' ? 'active' : '' %>">
-            <a href="/orders">Orders</a>
+            <a href="/myOrders">Orders</a>
         </li>
         <li class="<%= currentPage === 'wallet' ? 'active' : '' %>">
             <a href="/wallet">My Wallet</a>
         </li>
-        <li class="<%= currentPage === 'address' ? 'active' : '' %>">
-            <a href="/address">Address Book</a>
-        </li>
-        <li class="<%= currentPage === 'security' ? 'active' : '' %>">
-            <a href="/security">Security</a>
-        </li>
-        <li class="<%= currentPage === 'preferences' ? 'active' : '' %>">
-            <a href="/preferences">Preferences</a>
+        <li class="<%= currentPage === 'rating' ? 'active' : '' %>">
+            <a href="#">My Ratings</a>
         </li>
     </ul>
 </aside>
