--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Wishlist - CamZone</title>
     <link rel="stylesheet" href="/stylesheet/user/wishList.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <style>
+        .wishlist-btn i {
+            color: #ccc; 
+            font-size: 20px;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .wishlist-btn.active i {
+            color: red;
+        }
+        .wishlist-btn:hover i {
+            color: rgb(255, 90, 90);
+        }
+    </style>
 </head>
 <body>
     <%- include('../partials/users/header',{cart , search}) %>
@@ -46,7 +62,7 @@
                                         <% } else { %>
                                             <span>No Image</span>
                                         <% } %>
-                                        <button class="wishlist-btn active" data-product-id="<%= item.product._id %>">♡</button>
+                                        <button class="wishlist-btn active" data-product-id="<%= item.product._id %>"><i class="fa fa-heart"></i></button>
                                     </div>
                                     <div class="product-info">
                                         <h4><%= item.product.productName %></h4>
